# local_media_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  aria2.conf  config.yaml  docker-compose.yaml  requirements.txt
.github/workflows/: docker-push.yml
docs/plans/: 2026-03-09-media-mcp-design.md  2026-03-09-media-mcp-impl-plan.md  2026-03-20-jav-scraper-impl-plan.md  2026-03-20-jav-scraper-skill-design.md  2026-03-20-media-mcp-impl-plan.md  2026-03-20-media-mcp-jav-merge-design.md
skills/jav-scraper/: README.md  SKILL.md  pyproject.toml
skills/jav-scraper/src/: __init__.py  cli.py  scraper.py
src/: __init__.py  __main__.py  config.py  main.py
src/cli/: commands.py
src/models/: library.py  video.py
src/scrapers/: __init__.py  base.py  douban_scraper.py  tmdb_scraper.py  tvdb_scraper.py
src/tools/: __init__.py  aria2_manager.py  download.py  file_ops.py  media_scanner.py  nfo_generator.py
tests/: test_download.py  test_file_ops.py  test_integration.py  test_library.py  test_media_scanner.py  test_nfo_generator.py  test_video.py
